public/style.css
.topnav {
  background-color: #131975;
  background-image: url("file:///Users/riannemccartney/Downloads/snakebnb.png")
  display: inline;
  overflow: hidden;
}

/* Style the links inside the navigation bar */
.topnav a {
  float: right;
  color: #f2f2f2;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
  font-family: 'Poppins', sans-serif;
}

/* Change the color of links on hover */
.topnav a:hover {
  background-color: #ddd;
  color: black;
}

/* Add a color to the active/current link */
.topnav a.active {
  background-color: #6064a8;
  color: white;
  float: left;
}

/* body{
  overflow: hidden;
} */

h1 {
  font-size: 50px;
  font-family: 'Pacifico', cursive;
  text-align: center;
  color: #29384f;
  /* position: relative; */
}

h2 {
  font-size: 40px;
  font-family: 'Pacifico', cursive;
  text-align: center;
  color: #29384f;
  position: relative;
}

h3 {
  font-size: 30px;
  font-family: 'Poppins', sans-serif;
  text-align: center;
  color: #29384f;
  position: relative;
}

h4 {
  font-size: 16px;
  font-family: 'Poppins', sans-serif;
  text-align: center;
  color: #29384f;
  position: relative;
}

.myDiv {
    /* position: absolute; */
    z-index: 1;
}

.myDiv .bg {
    position: absolute;
    z-index: -1;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background: url(https://cdn.pixabay.com/photo/2016/07/21/10/27/maldives-1532172_960_720.jpg) center center;
    opacity: .6;
    /* width: 600px;
    height: 600px; */
    background-position: center;
    background-attachment: inherit;
    background-repeat: repeat;
    background-size: cover;
    height: auto;
    max-width: 100%;
}

.button {
   padding: 4px 10px;
   display:block;
   background-color: #daf2f5;
   color: #292c30;
   text-align:center;
   position: absolute;
   top: 10px;
   right: 10px;
   border-radius: 8px;
   font-family: 'Poppins', sans-serif;
}

.button:hover {
  background-color: #2b6c78;
}

.buttonTwo {
   padding: 6px 20px;
   display:block;
   background-color: #daf2f5;
   color: #292c30;
   text-align:center;
   /* position: absolute; */
   /* top: 200px; */
   width: 40%;
   border-radius: 8px;
   font-family: 'Poppins', sans-serif;
}

.buttonTwo:hover {
  background-color: #2b6c78;
}

.buttonThree {
   padding: 6px 6px;
   display:block;
   background-color: #daf2f5;
   color: #292c30;
   text-align: center;
   /* position: absolute; */
   /* top: 200px; */
   width: 16%;
   border-radius: 8px;
   border-color: #33115e;
   border-width: 4px;
   font-family: 'Poppins', sans-serif;
}

.buttonThree:hover {
  background-color: #2b6c78;
}

input {
  /* border: 10px #33115e; */
  border-radius: 4px;
  /* width: 40%; */
  padding: 10px 26px;
  font-size: 18px;
  font-family: 'Poppins', sans-serif;
}

textarea {
  border: 1px solid #ccc;
  margin: 0;
  padding: 8px;
  font-size: 18px;
  font-family: 'Poppins', sans-serif;
}

.listandard {
  list-style-type: none;
  margin: padding: 0;
  padding: 0;
}

#all_prop {
  margin-top: 20px;
  overflow-y: scroll;
  height:600px;
}

#list-element {
 background-color: white;
 border-radius: 12px;
 width: 50%;
 margin-top: 30px;
 margin-bottom: 10px;
 padding-top: 30px;
 padding-left: 30px;
 padding-right: 30px;
 border-style: solid;
}

#list-element-two {
 background-color: white;
 border-radius: 12px;
 width: 50%;
 margin-top: 30px;
 margin-bottom: 10px;
 margin-left: auto;
 margin-right: auto;
 padding-top: 30px;
 padding-left: 30px;
 padding-right: 30px;
 border-style: solid;
}

#space-footer {
 margin-top: 30px;
 padding-top: 0px;
 padding-bottom: 5px;
 padding-left: 5px;
 padding-right: 5px;
}

img {
  margin-top: 20px;
  display: block;
  margin-left: auto;
  margin-right: auto;
  max-width: 80%;
  max-height: 80%;
  border-radius: 12px;
}

#request-list {
 background-color: white;
 border-radius: 12px;
 width: 60%;
 margin-top: 30px;
 margin-bottom: 10px;
 padding-top: 30px;
 padding-left: 30px;
 padding-right: 30px;
 border-style: solid;
 /* text-align: left; */
}

.container {
  display:inline-block;
  width: 50%;
}

.container-two {
  float: right;
  width: 50%;
}

.logo-image{
   width: 46px;
   height: 46px;
   border-radius: 50%;
   overflow: hidden;
   margin-top: -6px;
}

